tests/compile-errors/providers/unsupported-type.d
provider unsupported {
	probe bad(float);
};
